--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -3,5 +3,6 @@
   "О нас": "О нас",
   "Контакты": "Контакты",
   "Аккаунт": "Аккаунт",
-  "languageSwitcher": "Переключить с <1>{{lng}}</1> на: "
+  "languageSwitcher": "Переключить с <1>{{lng}}</1> на: ",
+  "Админка": "Админка"
 }
