hero block done

--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -6,5 +6,7 @@
   "Контакты": "Contacts",
   "Аккаунт": "Account",
   "languageSwitcher": "Switch from <1>{{lng}}</1> to: ",
-  "Админка": "Admin panel"
+  "Админка": "Admin panel",
+  "Пигменты и оборудование": "Pigments and equipment",
+  "для перманентного макияжа": "for permanent makeup"
 }
