--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -6,5 +6,7 @@
   "Контакты": "Контакты",
   "Аккаунт": "Аккаунт",
   "languageSwitcher": "Переключить с <1>{{lng}}</1> на: ",
-  "Админка": "Админка"
+  "Админка": "Админка",
+  "Пигменты и оборудование": "Пигменты и оборудование",
+  "для перманентного макияжа": "для перманентного макияжа"
 }
