pop block ready

--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -8,5 +8,7 @@
   "languageSwitcher": "Switch from <1>{{lng}}</1> to: ",
   "Админка": "Admin panel",
   "Пигменты и оборудование": "Pigments and equipment",
-  "для перманентного макияжа": "for permanent makeup"
+  "для перманентного макияжа": "for permanent makeup",
+  "популярное": "popular",
+  "смотреть": "look"
 }
