--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -8,5 +8,7 @@
   "languageSwitcher": "Переключить с <1>{{lng}}</1> на: ",
   "Админка": "Админка",
   "Пигменты и оборудование": "Пигменты и оборудование",
-  "для перманентного макияжа": "для перманентного макияжа"
+  "для перманентного макияжа": "для перманентного макияжа",
+  "популярное": "популярное",
+  "смотреть": "смотреть"
 }
