new static block

--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -10,5 +10,9 @@
   "Пигменты и оборудование": "Pigments and equipment",
   "для перманентного макияжа": "for permanent makeup",
   "популярное": "popular",
-  "смотреть": "look"
+  "смотреть": "look",
+  "брендовые тату-машинки": "branded tattoo machines",
+  "лет в бьюти-индустрии": "years in the beauty industry",
+  "оригинальных пигментов": "original pigments",
+  "стран для экспорта": "countries for export"
 }
