--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -10,5 +10,9 @@
   "Пигменты и оборудование": "Пигменты и оборудование",
   "для перманентного макияжа": "для перманентного макияжа",
   "популярное": "популярное",
-  "смотреть": "смотреть"
+  "смотреть": "смотреть",
+  "брендовые тату-машинки": "брендовые тату-машинки",
+  "лет в бьюти-индустрии": "лет в бьюти-индустрии",
+  "оригинальных пигментов": "оригинальных пигментов",
+  "стран для экспорта": "стран для экспорта"
 }
