added simple footer. fixed favicon

--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -14,5 +14,6 @@
   "брендовые тату-машинки": "branded tattoo machines",
   "лет в бьюти-индустрии": "years in the beauty industry",
   "оригинальных пигментов": "original pigments",
-  "стран для экспорта": "countries for export"
+  "стран для экспорта": "countries for export",
+  "Все права защищены": "All Rights Reserved"
 }
