--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -14,5 +14,6 @@
   "брендовые тату-машинки": "брендовые тату-машинки",
   "лет в бьюти-индустрии": "лет в бьюти-индустрии",
   "оригинальных пигментов": "оригинальных пигментов",
-  "стран для экспорта": "стран для экспорта"
+  "стран для экспорта": "стран для экспорта",
+  "Все права защищены": "Все права защищены"
 }
