added partner block

--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -15,5 +15,12 @@
   "лет в бьюти-индустрии": "years in the beauty industry",
   "оригинальных пигментов": "original pigments",
   "стран для экспорта": "countries for export",
-  "Все права защищены": "All Rights Reserved"
+  "Все права защищены": "All Rights Reserved",
+  "хотите стать нашим партнером?": "would you like to become our partner?",
+  "Оставьте свои контакты и мы обязательно с вами свяжемся.": "Leave your contacts and we will definitely contact you.",
+  "имя": "name",
+  "эл. почта": "email",
+  "телефон": "phone",
+  "отправить": "send",
+  "Нажимая «отправить», вы принимаете условия публичной оферты.": "By clicking “send”, you accept the terms of the public offer."
 }
