--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -15,5 +15,12 @@
   "лет в бьюти-индустрии": "лет в бьюти-индустрии",
   "оригинальных пигментов": "оригинальных пигментов",
   "стран для экспорта": "стран для экспорта",
-  "Все права защищены": "Все права защищены"
+  "Все права защищены": "Все права защищены",
+  "хотите стать нашим партнером?": "хотите стать нашим партнером?",
+  "Оставьте свои контакты и мы обязательно с вами свяжемся.": "Оставьте свои контакты и мы обязательно с вами свяжемся.",
+  "имя": "имя",
+  "эл. почта": "эл. почта",
+  "телефон": "телефон",
+  "отправить": "отправить",
+  "Нажимая «отправить», вы принимаете условия публичной оферты.": "Нажимая «отправить», вы принимаете условия публичной оферты."
 }
