added laptop catalog filter

--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -22,5 +22,13 @@
   "эл. почта": "email",
   "телефон": "phone",
   "отправить": "send",
-  "Нажимая «отправить», вы принимаете условия публичной оферты.": "By clicking “send”, you accept the terms of the public offer."
+  "Нажимая «отправить», вы принимаете условия публичной оферты.": "By clicking “send”, you accept the terms of the public offer.",
+  "Все": "All",
+  "Пигменты": "Pigments",
+  "Оборудование": "Equipment",
+  "Мерч": "Merch",
+  "Губы": "Lips",
+  "Брови": "Eyebrows",
+  "Веки": "Eyelids",
+  "Фильтр": "Filter"
 }
