--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -22,5 +22,13 @@
   "эл. почта": "эл. почта",
   "телефон": "телефон",
   "отправить": "отправить",
-  "Нажимая «отправить», вы принимаете условия публичной оферты.": "Нажимая «отправить», вы принимаете условия публичной оферты."
+  "Нажимая «отправить», вы принимаете условия публичной оферты.": "Нажимая «отправить», вы принимаете условия публичной оферты.",
+  "Все": "Все",
+  "Пигменты": "Пигменты",
+  "Оборудование": "Оборудование",
+  "Мерч": "Мерч",
+  "Губы": "Губы",
+  "Брови": "Брови",
+  "Веки": "Веки",
+  "Фильтр": "Фильтр"
 }
