--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -32,5 +32,6 @@
   "Веки": "Веки",
   "Фильтр": "Фильтр",
   "добавить в корзину": "добавить в корзину",
-  "идеально в паре": "идеально в паре"
+  "идеально в паре": "идеально в паре",
+  "unitPrice": "{{price}} руб"
 }
