--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -33,5 +33,9 @@
   "Фильтр": "Фильтр",
   "добавить в корзину": "добавить в корзину",
   "идеально в паре": "идеально в паре",
-  "unitPrice": "{{price}} руб"
+  "unitPrice": "{{price}} руб",
+  "Спецификация": "Specification",
+  "Страна": "Страна",
+  "Описание": "Описание",
+  "Вес": "Вес"
 }
