--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -30,5 +30,12 @@
   "Губы": "Губы",
   "Брови": "Брови",
   "Веки": "Веки",
-  "Фильтр": "Фильтр"
+  "Фильтр": "Фильтр",
+  "добавить в корзину": "добавить в корзину",
+  "идеально в паре": "идеально в паре",
+  "unitPrice": "{{price}} руб",
+  "Спецификация": "Specification",
+  "Страна": "Страна",
+  "Описание": "Описание",
+  "Вес": "Вес"
 }
