added counter and recommended products

--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -37,5 +37,6 @@
   "Спецификация": "Спецификация",
   "Страна": "Country",
   "Описание": "Description",
-  "Вес": "Weight"
+  "Вес": "Weight",
+  "рекомендации для вас": "recommendations for you"
 }
