--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -37,5 +37,6 @@
   "Спецификация": "Specification",
   "Страна": "Страна",
   "Описание": "Описание",
-  "Вес": "Вес"
+  "Вес": "Вес",
+  "рекомендации для вас": "рекомендации для вас"
 }
