--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -38,5 +38,6 @@
   "Страна": "Country",
   "Описание": "Description",
   "Вес": "Weight",
-  "рекомендации для вас": "recommendations for you"
+  "рекомендации для вас": "recommendations for you",
+  "Корзина товара": "Cart {{itemsCount}} items"
 }
