--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -38,5 +38,6 @@
   "Страна": "Страна",
   "Описание": "Описание",
   "Вес": "Вес",
-  "рекомендации для вас": "рекомендации для вас"
+  "рекомендации для вас": "рекомендации для вас",
+  "Корзина товара": "Корзина {{itemsCount}} товара"
 }
