--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -39,5 +39,14 @@
   "Описание": "Описание",
   "Вес": "Вес",
   "рекомендации для вас": "рекомендации для вас",
-  "Корзина товара": "Корзина {{itemsCount}} товара"
+  "Корзина товара": "Корзина {{itemsCount}} товара",
+  "Оформление заказа": "Оформление заказа",
+  "ваш заказ": "ваш заказ",
+  "Товаров в заказе": "Товаров в заказе",
+  "доставка": "доставка",
+  "цена": "цена",
+  "итого": "итого",
+  "оплатить": "оплатить",
+  "сумма товаров": "сумма товаров",
+  "доставка до": "доставка до {{data}}"
 }
