--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -39,7 +39,8 @@
   "Описание": "Description",
   "Вес": "Weight",
   "рекомендации для вас": "recommendations for you",
-  "Корзина товара": "Cart {{itemsCount}} items",
+  "Корзина товара": "Cart: {{itemsCount}} item",
+  "Корзина товаров": "Cart: {{itemsCount}} items",
   "Оформление заказа": "Ordering",
   "ваш заказ": "your order",
   "Товаров в заказе": "Items in order",
@@ -48,5 +49,6 @@
   "итого": "total",
   "оплатить": "pay",
   "сумма товаров": "total items",
-  "доставка до": "delivery to {{data}}"
+  "доставка до": "delivery to {{data}}",
+  "шт.": "pcs."
 }
