--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -50,5 +50,6 @@
   "оплатить": "pay",
   "сумма товаров": "total items",
   "доставка до": "delivery to {{data}}",
-  "шт.": "pcs."
+  "шт.": "pcs.",
+  "Товар добавлен": "Item added"
 }
