--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -50,5 +50,6 @@
   "оплатить": "оплатить",
   "сумма товаров": "сумма товаров",
   "доставка до": "доставка до {{data}}",
-  "шт.": "шт."
+  "шт.": "шт.",
+  "Товар добавлен": "Товар добавлен"
 }
