--- a/app/i18n/locales/ru/translation.json
+++ b/app/i18n/locales/ru/translation.json
@@ -51,5 +51,6 @@
   "сумма товаров": "сумма товаров",
   "доставка до": "доставка до {{data}}",
   "шт.": "шт.",
-  "Товар добавлен": "Товар добавлен"
+  "Товар добавлен": "Товар добавлен",
+  "Сбросить корзину": "Сбросить корзину"
 }
